# ia-pipeline

./: .ci_pro_config  .coverage  .coverage.Mac.23521.XMQwnMSx  .coverage.Mac.82812.XiHutEex  .coveragerc  .gitignore  .pre-commit-config.yaml  .pytestignore  404.html  =0.4.6  =1.0.0  =13.0.0  =2.28.0  =3.0.0  =3.10.0  =4.0.0  =5.9.0  =6.0.0  =7.0.0  =8.1.0  ANALYSE_COMPLETE_TOUS_MD_ATHALIA.md  ANALYSE_TABLE_RONDE_25_EXPERTS_ATHALIA.md  AUDIT_COMPLET_DOCUMENTATION_ATHALIA.md  AUDIT_FUTUR_PROBLEMES.md  AUDIT_PHASE1_EN_COURS.md  AUDIT_REALITE_COMPLET.md  AUDIT_SECURITY_QUALITY_REPORT.md  AUDIT_TESTS_COMPLET.md  CHANGELOG  CHANGELOG.md  CLEANUP_REPORT.md  DECISION_FINALE_DOCUMENTATION_ATHALIA.md  DOCUMENTATION_PARFAITE_FINALE_ATHALIA.md  DOCUMENTATION_PROFESSIONNELLE_FINALE_ATHALIA.md  Dockerfile  EVALUATION_ATHALIA_COMPLETE_25_EXPERTS.md  FICHE_PRESENTATION_EXPERT.md  FINAL_SUMMARY.md  GUIDE_CORRECTION_PROBLEMES_ATHALIA_20250803.md  GUIDE_OPTIMISATION_MANUEL.md  (+139 more)
.athalia_cache/: 2108889f6f16e1ae.pkl  212f66896db84571.pkl  47482aa51c882b6b.pkl  4f2f6cc1a317e6de.pkl  7147ec90452e80f5.pkl  758aaca6a3a7ec6f.pkl  7c48dacf1515f2d3.pkl  86cb9082fd74244f.pkl  8d6df04228889fdf.pkl  8fea135eba02cee3.pkl  924576e439eb5bd3.pkl  99c2c9b730640e78.pkl  a14226c02e8ba596.pkl  aaf4e0c2942dd23a.pkl  cache_stats.json  cd1d75bf5c931575.pkl  ce281ba7050fdbad.pkl  da1090c785b7ca17.pkl  f859b400a1ab3a01.pkl
FloatingBlueBallProject/: DOC.md  ONBOARDING.md  README.md  blueprint.yaml  github_issues.md  openapi.yaml  requirements.txt  sequence_dynamic.mmd
VioletTwistAI/: ONBOARDING.md  main.py  sequence_dynamic.mmd
agents/: agent_audit.py  agent_network.py  ath_context_prompt.py
archive/: README.md  audit_report.yaml  resultat_test_aliases_execution.txt  resultat_tests_advanced_analytics.txt  resultat_tests_ai_robust_unit_only.txt  resultat_tests_analytics_unit_only.txt  resultat_tests_auto_cleaner.txt  resultat_tests_auto_cleaner2.txt  resultat_tests_auto_cleaner_unit_only.txt  resultat_tests_auto_documenter_unit_only2.txt  resultat_tests_auto_documenter_unit_only3.txt  resultat_tests_auto_documenter_unit_only5.txt  resultat_tests_auto_documenter_unit_only6.txt  resultat_tests_auto_tester.txt  resultat_tests_auto_tester2.txt  resultat_tests_auto_tester_unit_only.txt  resultat_tests_bin.txt  resultat_tests_final.txt  resultat_tests_final2.txt  resultat_tests_final_complet.txt  resultat_tests_final_validation.txt  resultats_tests.txt  test_dashboard_simple.html
athalia-dev-setup/: ath-architect.py
athalia_core/: README.md  __init__.py  advanced_analytics.py  ai_robust.py  ai_robust_broken.py  ai_robust_enhanced.py  analytics.py  architecture_analyzer.py  ast_analyzer.py  athalia_orchestrator.py  athalia_report_20250719_130708.json  audit.py  auto_cicd.py  auto_cleaner.py  auto_documenter.py  auto_documenter_fixed.py  auto_fixer.py  auto_tester.py  autocomplete_engine.py  autocomplete_server.py  backup_system.py  cache_manager.py  ci.py  cleanup.py  cli.py  cli_standard.py  code_linter.py  config_manager.py  correction_optimizer.py  dashboard.py  error_codes.py  error_handling.py  generation.py  generation_backup.py  generation_broken.py  generation_simple.py  intelligent_analyzer.py  intelligent_auditor.py  intelligent_memory.py  intelligent_orchestrator.py  (+22 more)
athalia_showcase/: auto_correction_report.json  quality_report.json  security_audit_report.json
blueprints_history/: blueprint_TodoListAPI_20250717_053434.yaml
cache/: slow_function_1275b8d4_99914b93.json  test_0_3c31996e_99914b93.json  test_0_5f51333b_99914b93.json  test_0_89dba185_99914b93.json  test_10_3c31996e_99914b93.json  test_10_5f51333b_99914b93.json  test_10_89dba185_99914b93.json  test_11_3c31996e_99914b93.json  test_11_5f51333b_99914b93.json  test_11_89dba185_99914b93.json  test_12_3c31996e_99914b93.json  test_12_5f51333b_99914b93.json  test_12_89dba185_99914b93.json  test_13_3c31996e_99914b93.json  test_13_5f51333b_99914b93.json  test_13_89dba185_99914b93.json  test_14_3c31996e_99914b93.json  test_14_5f51333b_99914b93.json  test_14_89dba185_99914b93.json  test_15_3c31996e_99914b93.json  test_15_5f51333b_99914b93.json  test_15_89dba185_99914b93.json  test_16_3c31996e_99914b93.json  test_16_5f51333b_99914b93.json  test_16_89dba185_99914b93.json  test_17_3c31996e_99914b93.json  test_17_5f51333b_99914b93.json  test_17_89dba185_99914b93.json  test_18_3c31996e_99914b93.json  test_18_5f51333b_99914b93.json  test_18_89dba185_99914b93.json  test_19_3c31996e_99914b93.json  test_19_5f51333b_99914b93.json  test_19_89dba185_99914b93.json  test_1_3c31996e_99914b93.json  test_1_5f51333b_99914b93.json  test_1_89dba185_99914b93.json  test_20_3c31996e_99914b93.json  test_20_5f51333b_99914b93.json  test_20_89dba185_99914b93.json  (+264 more)
changelog/: index.html
config/: .bandit  .flake8  .isort.cfg  .pre-commit-config.yaml  Cargo.toml  athalia_config.yaml  autopep8.cfg  config.yml  lint-fix.sh  paths.yaml  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt  requirements_robotics.txt  requirements_scan.txt
dashboard/: analytics_dashboard.html  analytics_dashboard_optimized.html  dashboard.html  dashboard.md  dashboard_interactif_avance.html  dashboard_validation.html  index.html  test_dashboard.html  test_dashboard_simple.html
data/: README.md  architecture_analysis.db  athalia_performance_test_20250729_165059.json  athalia_performance_test_20250729_184257.json  athalia_report_20250717_071804.json  benchmarks.csv  cleanup_report_20250720_183636.json  comprehensive_analysis__20250719_170730.json  comprehensive_analysis__20250719_171231.json  comprehensive_analysis__20250719_171357.json  comprehensive_analysis__20250719_171415.json  comprehensive_analysis__20250719_194504.json  comprehensive_analysis__20250720_131448.json  comprehensive_analysis__20250720_131651.json  comprehensive_analysis__20250720_132110.json  comprehensive_analysis__20250720_183316.json  comprehensive_analysis__20250720_183813.json  comprehensive_analysis__20250720_184142.json  comprehensive_analysis__20250726_093708.json  (+52 more)
docs/: ALIAS.md  (+54 more)
(+5125 files in other folders)
